# velodyne-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: basic-build-ci.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/velodyne_driver/: driver.hpp
rpm/: ros-galactic-velodyne-driver.spec  ros-galactic-velodyne-laserscan.spec  ros-galactic-velodyne-msgs.spec  ros-galactic-velodyne-pointcloud.spec  ros-galactic-velodyne.spec  ros-humble-velodyne-driver.spec  ros-humble-velodyne-msgs.spec  ros-humble-velodyne.spec  ros-indigo-velodyne-driver.spec  ros-indigo-velodyne-laserscan.spec  ros-indigo-velodyne-msgs.spec  ros-indigo-velodyne-pointcloud.spec  ros-indigo-velodyne.spec  ros-iron-velodyne-driver.spec  ros-iron-velodyne-laserscan.spec  ros-iron-velodyne-msgs.spec  ros-iron-velodyne-pointcloud.spec  ros-iron-velodyne.spec  ros-jazzy-velodyne-driver.spec  ros-jazzy-velodyne-laserscan.spec  ros-jazzy-velodyne-msgs.spec  ros-kinetic-velodyne-driver.spec  ros-kinetic-velodyne-laserscan.spec  ros-kinetic-velodyne-msgs.spec  ros-lyrical-velodyne-msgs.spec  ros-lyrical-velodyne-pointcloud.spec  ros-melodic-velodyne-driver.spec  ros-melodic-velodyne-laserscan.spec  ros-melodic-velodyne-msgs.spec  ros-melodic-velodyne-pointcloud.spec  ros-melodic-velodyne.spec  ros-noetic-velodyne-driver.spec  ros-noetic-velodyne-laserscan.spec  ros-noetic-velodyne-msgs.spec  ros-noetic-velodyne-pcl.spec  ros-noetic-velodyne.spec  ros-rolling-velodyne-driver.spec  ros-rolling-velodyne-laserscan.spec  ros-rolling-velodyne-msgs.spec  ros-rolling-velodyne-pointcloud.spec  (+2 more)
src/driver/: driver.cpp
tests/: CMakeLists.txt
velodyne/: CHANGELOG.rst  package.xml
velodyne_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne_laserscan/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne_pointcloud/: CHANGELOG.rst  CMakeLists.txt  package.xml
velodyne_pointcloud/src/lib/: calibration.cpp
